# orchestrator

./: .env  .env-template  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  docker-compose.web.yml  orchestrator-design-plan.md  orchestrator-events.db
crates/backend-codex/: Cargo.toml
crates/backend-codex/src/: lib.rs
crates/backend-codex/tests/: core_runtime_bridge.rs  legacy_runtime_bridge.rs  server_backend_codex.rs
crates/backend-opencode/: Cargo.toml
crates/backend-opencode/src/: lib.rs
crates/backend-opencode/tests/: core_runtime_bridge.rs  fake_pty_backend_event_flow.rs  legacy_runtime_bridge.rs  server_backend_event_flow.rs
crates/integration-linear/: Cargo.toml
crates/integration-linear/src/: lib.rs
crates/integration-linear/src/linear/: config_and_graphql.rs  provider_core.rs  provider_trait_and_models.rs  tests.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator-app/: Cargo.toml
crates/orchestrator-app/src/: command_dispatch.rs  lib.rs  main.rs  ticket_picker.rs
crates/orchestrator-app/src/attention/: mod.rs
crates/orchestrator-app/src/bootstrap/: mod.rs
crates/orchestrator-app/src/command_dispatch/: supervisor_tools_and_runtime.rs  tests.rs  workflow_and_pr_resolution.rs
crates/orchestrator-app/src/commands/: mod.rs
crates/orchestrator-app/src/composition/: mod.rs
crates/orchestrator-app/src/controller/: action_runners.rs  contracts.rs  mod.rs
crates/orchestrator-app/src/error/: mod.rs
crates/orchestrator-app/src/events/: mod.rs
crates/orchestrator-app/src/frontend/: mod.rs
crates/orchestrator-app/src/jobs/: mod.rs
crates/orchestrator-app/src/lib/: app_runtime.rs  config_and_bootstrap.rs  frontend_contract.rs  frontend_controller.rs  runtime_stream_coordinator.rs  tests.rs
crates/orchestrator-app/src/normalization/: mod.rs
crates/orchestrator-app/src/projection/: mod.rs
crates/orchestrator-app/tests/: startup_integration.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: adapters.rs  attention_engine.rs  commands.rs  error.rs  events.rs  identifiers.rs  lib.rs  normalization.rs  projection.rs  status.rs  store.rs  test_support.rs  tests.rs  ticket_selection.rs  workflow.rs  workflow_automation.rs
crates/orchestrator-core/src/store/: codec.rs  event_store_impl.rs  sqlite_impl.rs  types.rs
crates/orchestrator-core/src/tests/: events_and_replay.rs  runtime_and_adapters.rs  schema_and_mappings.rs
crates/orchestrator-core/src/ticket_selection/: flow_runtime.rs  helpers.rs  tests.rs  types_and_config.rs
crates/orchestrator-github/: Cargo.toml
crates/orchestrator-github/src/: lib.rs
crates/orchestrator-harness/: Cargo.toml
crates/orchestrator-harness/src/: factory.rs  lib.rs
crates/orchestrator-harness/src/interface/: mod.rs
crates/orchestrator-harness/src/providers/: mod.rs
crates/orchestrator-harness/src/providers/codex/: config.rs  mod.rs  provider_impl.rs  transport.rs
crates/orchestrator-harness/src/providers/opencode/: config.rs  mod.rs  transport.rs
crates/orchestrator-harness/tests/: codex_server_backend_stdio_contract.rs  opencode_protocol_contracts.rs  opencode_server_backend_event_flow.rs
crates/orchestrator-runtime/: Cargo.toml
crates/orchestrator-runtime/src/: lib.rs  pty_manager.rs  terminal_emulator.rs  worker_manager.rs
crates/orchestrator-supervisor/: Cargo.toml
crates/orchestrator-supervisor/src/: lib.rs  query_engine.rs  template_library.rs
crates/orchestrator-supervisor/src/interface/: mod.rs
crates/orchestrator-ticketing/: Cargo.toml
crates/orchestrator-ticketing/src/: factory.rs  lib.rs
crates/orchestrator-ticketing/src/interface/: mod.rs
crates/orchestrator-ticketing/src/providers/: mod.rs
crates/orchestrator-ticketing/src/providers/linear/: config.rs  config_and_graphql.rs  mod.rs  provider_trait_and_models.rs  tests.rs  transport.rs
crates/orchestrator-ticketing/src/providers/shortcut/: config.rs  mod.rs  transport.rs
crates/orchestrator-ticketing/tests/: provider_contracts.rs
crates/orchestrator-ui/: Cargo.toml
crates/orchestrator-ui/src/: golden_tests.rs  keymap.rs  lib.rs
crates/orchestrator-ui/src/ui/: async_tasks_and_overlay_routing.rs  focus_card_and_ticket_picker.rs  input_and_terminal.rs  inspector_and_supervisor.rs  mod.rs  rendering.rs  runtime.rs  shell_state.rs  tests_and_goldens.rs  types_and_projection.rs
crates/orchestrator-ui/src/ui/bootstrap/: mod.rs
crates/orchestrator-ui/src/ui/features/: mod.rs
crates/orchestrator-ui/src/ui/input/: mod.rs
crates/orchestrator-ui/src/ui/render/: mod.rs
crates/orchestrator-ui/src/ui/tests/: mod.rs
crates/orchestrator-ui/src/ui/theme/: mod.rs
crates/orchestrator-ui/src/ui/view_state/: mod.rs
crates/orchestrator-ui/tests/: mvc_boundary.rs
crates/orchestrator-ui/tests/golden/ui_state/fixtures/: focus_card_view.json  inbox_view.json  inspector_view.json  sessions_view.json  terminal_overlay_view.json
crates/orchestrator-ui/tests/golden/ui_state/snapshots/: focus_card_view.snap  inbox_view.snap  (+3 more)
crates/orchestrator-vcs/: Cargo.toml
crates/orchestrator-vcs-repos/: Cargo.toml
crates/orchestrator-vcs-repos/src/: factory.rs  lib.rs
crates/orchestrator-vcs-repos/src/interface/: mod.rs
crates/orchestrator-vcs-repos/src/providers/: mod.rs
crates/orchestrator-vcs-repos/src/providers/github_gh_cli/: config.rs  mod.rs  provider_impl.rs  transport.rs
crates/orchestrator-vcs/src/: factory.rs  lib.rs
crates/orchestrator-vcs/src/interface/: mod.rs
crates/orchestrator-vcs/src/providers/git_cli/: config.rs  mod.rs  provider_impl.rs  safety_guards.rs  tests.rs  transport.rs  types_and_config.rs
crates/orchestrator-worker-lifecycle/: Cargo.toml
crates/orchestrator-worker-lifecycle/src/: controller.rs  lib.rs  registry.rs  state.rs
crates/orchestrator-worker-runtime/: Cargo.toml
crates/orchestrator-worker-runtime/src/: lib.rs
crates/orchestrator-worker-scheduler/: Cargo.toml
crates/orchestrator-worker-scheduler/src/: lib.rs  task.rs
crates/orchestrator/src/: main.rs
crates/orchestrator/tests/: workspace_manifest_contracts.rs
(+62 files in other folders)
