[workspace]
members = [
    "crates/orchestrator",
    "crates/orchestrator-app",
    "crates/orchestrator-config",
    "crates/orchestrator-domain",
    "crates/orchestrator-harness",
    "crates/orchestrator-supervisor",
    "crates/orchestrator-ticketing",
    "crates/orchestrator-ui",
    "crates/orchestrator-vcs",
    "crates/orchestrator-vcs-repos",
    "crates/orchestrator-worker-eventbus",
    "crates/orchestrator-worker-lifecycle",
    "crates/orchestrator-worker-protocol",
    "crates/orchestrator-worker-runtime",
    "crates/orchestrator-worker-scheduler",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
crossterm = "0.28"
async-trait = "0.1"
ratatui = "0.30"
ratskin = "0.3.1"
ratatui-interact = "0.4.2"
edtui = { version = "0.11.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
portable-pty = "0.9"
vt100 = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
time = { version = "0.3", features = ["parsing"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
