[package]
name = "backend-codex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
orchestrator-runtime = { path = "../orchestrator-runtime" }
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util", "process", "sync", "time"] }
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
