[package]
name = "backend-opencode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-runtime = { path = "../orchestrator-runtime" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "time"] }

[dev-dependencies]
tokio.workspace = true
