[package]
name = "backend-opencode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-runtime = { path = "../orchestrator-runtime" }
async-trait.workspace = true
futures-util = "0.3"
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "time"] }
tracing.workspace = true

[dev-dependencies]
axum = "0.8"
tokio.workspace = true
