[package]
name = "backend-opencode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-harness = { path = "../orchestrator-harness" }

[dev-dependencies]
axum = "0.8"
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-worker-protocol = { path = "../orchestrator-worker-protocol" }
serde.workspace = true
tokio.workspace = true
