[package]
name = "orchestrator-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
integration-linear = { path = "../integration-linear" }
integration-shortcut = { path = "../integration-shortcut" }
integration-git = { path = "../integration-git" }
backend-codex = { path = "../backend-codex" }
backend-opencode = { path = "../backend-opencode" }
async-trait.workspace = true
anyhow.workspace = true
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-github = { path = "../orchestrator-github" }
orchestrator-supervisor = { path = "../orchestrator-supervisor" }
orchestrator-ui = { path = "../orchestrator-ui" }
orchestrator-worker-protocol = { path = "../orchestrator-worker-protocol" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true

[dev-dependencies]
orchestrator-core = { path = "../orchestrator-core", features = ["test-support"] }
serde_json.workspace = true
