[package]
name = "orchestrator-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
