[package]
name = "orchestrator-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
test-support = []

[dependencies]
orchestrator-worker-protocol = { path = "../orchestrator-worker-protocol" }
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
time.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
