[package]
name = "orchestrator-github"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-core = { path = "../orchestrator-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
