[package]
name = "orchestrator-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
futures-util = "0.3"
orchestrator-worker-protocol = { path = "../orchestrator-worker-protocol" }
reqwest = { workspace = true, features = ["stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "time"] }
tracing.workspace = true

[dev-dependencies]
axum = "0.8"
tokio.workspace = true
