[package]
name = "orchestrator-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
portable-pty.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
vt100.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
