[package]
name = "orchestrator-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
# Frozen for feature work per docs/runtime-refactor-plan.md (RRP26 A01).

[dependencies]
async-trait.workspace = true
orchestrator-worker-protocol = { path = "../orchestrator-worker-protocol" }
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
