[package]
name = "orchestrator-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-core = { path = "../orchestrator-core" }
async-trait.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
orchestrator-core = { path = "../orchestrator-core", features = ["test-support"] }
