[package]
name = "orchestrator-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-domain = { path = "../orchestrator-domain" }
async-trait.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
orchestrator-domain = { path = "../orchestrator-domain", features = ["test-support"] }
