[package]
name = "orchestrator-ticketing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-domain = { path = "../orchestrator-domain" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
