[package]
name = "orchestrator-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-worker-protocol = { path = "../orchestrator-worker-protocol" }
crossterm.workspace = true
ratatui.workspace = true
ratskin.workspace = true
ratatui-interact.workspace = true
edtui.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
