[package]
name = "orchestrator-vcs-repos"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
orchestrator-core = { path = "../orchestrator-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
