[package]
name = "orchestrator-vcs"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
orchestrator-domain = { path = "../orchestrator-domain" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
