[package]
name = "orchestrator-worker-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-worker-protocol = { path = "../orchestrator-worker-protocol" }
orchestrator-worker-eventbus = { path = "../orchestrator-worker-eventbus" }
tokio = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
