[package]
name = "orchestrator-worker-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
orchestrator-worker-protocol = { path = "../orchestrator-worker-protocol" }
orchestrator-worker-lifecycle = { path = "../orchestrator-worker-lifecycle" }
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
orchestrator-worker-eventbus = { path = "../orchestrator-worker-eventbus" }
